@@ -1,4 +1,5 @@
 1.0.1
+Copy-FileToBcContainer and Copy-FileFromBcContainer didn't support that hostHelperFolder and containerHelperFolder was different
 
 1.0.0
 Change module name to BcContainerHelper
